# pypto-lib

./: README.md  README_CN.md  SOW_20260407.docx  pyproject.toml  setup_npu_env.sh
.claude/skills/bisect-precision/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/setup_env/: SKILL.md
.github/workflows/: ci.yml
docs/: agent_feedback_design.md  baseline_selection_guide.md  npu_hang_diagnosis_and_fix.md  performance_analysis_guide.md  pr_guide_block_dim_fix.md  pypto-coding-style.md  swimlane_autoconvert_fix.md  swimlane_guide.md
docs/opt-design/: golden_verification_design.md  optimization_correctness_methodology.md
docs/opt-records/: S3-1_gate_up_fusion_result.md
examples/: swimlane_converter.py
examples/beginner/: hello_world.py  matmul.py
examples/models/deepseek_v3_2/: deepseek_v3_2_decode_back.py  deepseek_v3_2_decode_front.py  deepseek_v3_2_decode_front_scope2.py  deepseek_v3_2_decode_front_scope3.py  deepseek_v3_2_decode_front_scope4.py  deepseek_v3_2_prefill_back.py  deepseek_v3_2_prefill_front.py
examples/models/qwen-opt/: S3-1_gate_up_fusion.md  qwen3_32b_decode-opt.py  qwen3_32b_decode_scope1-opt.py  qwen3_32b_decode_scope1_opt.py  qwen3_32b_decode_scope1_tile_opt.py  qwen3_32b_decode_scope2-opt.py  qwen3_32b_decode_scope2_opt.py  qwen3_32b_decode_scope2_opt.py.bak  qwen3_32b_decode_scope2_opt.py.round1  qwen3_32b_decode_scope3-opt.py  qwen3_32b_decode_scope3.py  qwen3_32b_optimization_analysis.md  qwen3_optimization_analysis.md  (+2 more)
golden/: __init__.py  validation.py
tests/golden/: test_validation.py
tools/: perf_analyzer.py
(+39 files in other folders)
